src/test/deca/context/valid/sansObjet/add.deca
// Description :
//    Test de l'opérateur + appliqué à int.
//
// Resultats :
// ok

{
    int a = 5;
    int b = 7;
    int c;
    c = a + b;
    print(c);
}