src/test/deca/context/invalid/avecObjet/instanceof_invalid.deca
// Description:
//    Test d'instanceof invalide.
//
// Resultats:
//    Ligne 6 : L'opérateur instanceof s'applique à un objet

class A {}

{
    int i = 5;
    boolean res;
    res = i instanceof A;
}
